--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <title>Bonfire</title>
-        <meta name="viewport" content="width=600, user-scalable=no">
+        <meta name="viewport" content="width=device-width, user-scalable=false">
         <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate" />
         <meta http-equiv="Pragma" content="no-cache" />
         <meta http-equiv="Expires" content="0" />
