message rendering works

--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,7 @@
         <meta http-equiv="Expires" content="0" />
         <link rel="icon" href="BFiconFinished.ico">
         <script type="text/javascript" src="https://assets.gfycat.com/gfycat.js"></script>
+        <link rel="stylesheet" href="https://unpkg.com/tachyons@4.10.0/css/tachyons.min.css"/>
         <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
         <script>
             if (window.require) {
