--- a/src/index.html
+++ b/src/index.html
@@ -2,10 +2,7 @@
 <html>
     <head>
         <title>Bonfire</title>
-        <meta name="viewport" content="width=device-width, user-scalable=false">
-        <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate" />
-        <meta http-equiv="Pragma" content="no-cache" />
-        <meta http-equiv="Expires" content="0" />
+        <meta name="viewport" content="height=device-height,width=device-width,initial-scale=1.0,maximum-scale=1.0,user-scalable=no" />
         <link rel="icon" href="BFiconFinished.ico">
         <script type="text/javascript" src="https://assets.gfycat.com/gfycat.js"></script>
         <link rel="stylesheet" href="https://unpkg.com/tachyons@4.10.0/css/tachyons.min.css"/>
